[tool.poetry]
name = "coder-coder"
version = "0.2.0"
description = ""
authors = ["Kevin Fortier <kevin.r.fortier@gmail.com>"]
readme = "README.md"
packages = [{include = "coder_coder"}]

[tool.poetry.scripts]
coder = "coder_coder.main:app"


[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
openai = "^0.27.5"
python-dotenv = "^1.0.0"
pip = "^23.1.2"
install = "^1.3.5"
s3fs = "^2023.4.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
