[tool.poetry]
name = "coder-coder"
version = "0.2.1"
description = ""
authors = ["Kevin Fortier <kevin.r.fortier@gmail.com>"]
readme = "README.md"
packages = [{include = "coder_coder"}]

[tool.poetry.scripts]
coder = "coder_coder.main:app"


[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
openai = "^0.27.5"
pip = "^23.1.2"
install = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
